--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="navigation_bar_generate_report">Relatórios</string>
     <string name="navigation_bar_settings">Configurações</string>
     <string name="navigation_bar_help">Ajuda</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
