--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="meal_successful_deleted_message">Refeição deletada com sucesso</string>
     <string name="error_no_meal_in_period">Não há refeições registradas no periodo informado. Por favor selecione um período diferente</string>
     <string name="generating_meals_report">Gerando relátorio das suas refeições. Por favor, aguarde</string>
+    <string name="foods_added">Alimentos adicionados</string>
 
 
 </resources>
