--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,5 +90,8 @@
     <string name="foods_added">Alimentos adicionados</string>
     <string name="food_name">Alimento</string>
 
+    <!-- Notification chanels-->
+    <string name="meal_reminder_chanel_name">Lembretes de refeições</string>
+    <string name="meal_reminder_chanel_description">Notificações que irão lembrá-lo(a) de realizar suas refeições sempre no mesmo horário</string>
 
 </resources>
