--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,108 +2,113 @@
 
     <!-- Fragments -->
     <string name="app_name">Coma Certo</string>
-    <string name="navigation_bar_list_meal">Refeições</string>
-    <string name="navigation_bar_generate_report">Relatórios</string>
-    <string name="navigation_bar_settings">Configurações</string>
-    <string name="navigation_bar_help">Ajuda</string>
+    <string name="navigation_bar_list_meal">Meals</string>
+    <string name="navigation_bar_generate_report">Reports</string>
+    <string name="navigation_bar_settings">Settings</string>
+    <string name="navigation_bar_help">Help</string>
 
     <!-- Add new meal-->
-    <string name="no_meals_registered">Sem refeições cadastradas</string>
-    <string name="how_i_feel_title">Como me senti</string>
-    <string name="what_meal_i_doing_title">Que refeição estou fazendo?</string>
-    <string name="menu_add_meal">Adicionar Refeição</string>
-    <string name="when_i_eat">Quando comi</string>
+    <string name="no_meals_registered">No meals registered</string>
+    <string name="how_i_feel_title">How I felt</string>
+    <string name="what_meal_i_doing_title">What meal I\'m doing</string>
+    <string name="menu_add_meal">Add meal</string>
+    <string name="when_i_eat">When I ate</string>
     <string name="date">Date</string>
-    <string name="hour">Hora</string>
-    <string name="what_i_ate">O que comi</string>
-    <string name="what_was_doing">O que estava fazendo</string>
+    <string name="hour">Hour</string>
+    <string name="what_i_ate">What I ate</string>
+    <string name="what_was_doing">What I was doing</string>
 
     <!-- Foods-->
-    <string name="no_foods_registered">Nenhum alimento adicionado</string>
+
     <plurals name="foods_registered">
-        <item quantity="one">Alimento registrado</item>
-        <item quantity="other">Alimentos registrados</item>
+        <item quantity="zero">>No foods added</item>
+        <item quantity="one">One food added</item>
+        <item quantity="other">%d Foods added</item>
+    </plurals>
+    <plurals name="and_more_foods">
+        <item quantity="one">and more one food</item>
+        <item quantity="other">and more %d foods</item>
     </plurals>
     <string name="blank"></string>
 
     <!-- Feelings-->
     <string name="feeling_natural">Normal</string>
-    <string name="feeling_anxiety">Ansioso</string>
-    <string name="feeling_frustration">Frustrado</string>
-    <string name="feeling_irritation">Irritado</string>
-    <string name="feeling_hurry">Com pressa</string>
-    <string name="feeling_rage">Com raiva</string>
-    <string name="feeling_boredom">Entediado</string>
-    <string name="feeling_sad">Triste</string>
+    <string name="feeling_anxiety">Anxious</string>
+    <string name="feeling_frustration">Frustrated</string>
+    <string name="feeling_irritation">Riled up</string>
+    <string name="feeling_hurry">hurry</string>
+    <string name="feeling_rage">Angry</string>
+    <string name="feeling_boredom">Bored</string>
+    <string name="feeling_sad">Sad</string>
 
     <!-- Meals -->
-    <string name="meal_breakfast">Café da manhã</string>
-    <string name="meal_lunch">Almoço</string>
-    <string name="meal_snack">Lanche</string>
-    <string name="meal_dinner">Janta</string>
-    <string name="hunger_level">Nível de fome</string>
-    <string name="hungry">Fome</string>
-    <string name="hungry_level">nível de fome</string>
-    <string name="satiety">Saciedade</string>
-    <string name="satiety_level">Nível de saciedade</string>
-    <string name="add_foods_to_meals">Adicione os alimentos desta refeição</string>
-    <string name="save_meal">Salvar refeição</string>
-    <string name="add_new_meal">Adicionar uma nova refeição</string>
-    <string name="foods">Alimentos</string>
-    <string name="add_foods">Adicionar alimentos</string>
-    <string name="meal">Refeição</string>
-    <string name="feeling">Sentimento</string>
-    <string name="delete_meal">Deletar Refeição</string>
-    <string name="initial_date">Data inicial</string>
+    <string name="meal_breakfast">Breakfast</string>
+    <string name="meal_lunch">Lunch</string>
+    <string name="meal_snack">Snack</string>
+    <string name="meal_dinner">Dinner</string>
+    <string name="hunger_level">Hunger level</string>
+    <string name="hungry">Hunger</string>
+    <string name="hungry_level">Hunger level</string>
+    <string name="satiety">Satiety</string>
+    <string name="satiety_level">Satiety level</string>
+    <string name="add_foods_to_meals">Add foods to this meal</string>
+    <string name="save_meal">Save meal</string>
+    <string name="add_new_meal">Add new meal</string>
+    <string name="foods">Foods</string>
+    <string name="add_foods">Add foods</string>
+    <string name="meal">meal</string>
+    <string name="feeling">Feelings</string>
+    <string name="delete_meal">Delete meal</string>
+    <string name="initial_date">Initial Date</string>
     <string name="final_date">Final date</string>
-    <string name="add_reminders">Adicionar Lembretes</string>
+    <string name="add_reminders">Add reminders</string>
 
     <!-- Report -->
     <string name="select_report_period">Selecione um período para gerar o seu relatório</string>
-    <string name="period_weekly">Semanal</string>
+    <string name="period_weekly">Weekly</string>
     <string name="period_biweekly_1">Primeira quinzena</string>
     <string name="period_biweekly_2">Segunda quinzena</string>
-    <string name="period_monthly">Mensal</string>
-    <string name="period_select">Escolher período</string>
-    <string name="period_custom">Período personalizado</string>
+    <string name="period_monthly">Monthly</string>
+    <string name="period_select">Select Period</string>
+    <string name="period_custom">Custom Period</string>
 
 
     <!-- Preferences -->
-    <string name="preference_category_reminders">Lembretes</string>
-    <string name="preferences_enable_reminder">Habilitar lembretes</string>
+    <string name="preference_category_reminders">Reminders</string>
+    <string name="preferences_enable_reminder">Enable reminders</string>
     <string name="preferences_enable_reminder_summary">Para lembrar-lo de fazer suas refeições no horário correto</string>
-    <string name="preferences_reminder_breakfast">Horário do café da manhã</string>
+    <string name="preferences_reminder_breakfast">Breakfast time</string>
     <string name="preferences_reminder_breakfast_summary">08:00</string>
-    <string name="preferences_reminder_lunch">Horário do almoço</string>
+    <string name="preferences_reminder_lunch">Lunch time</string>
     <string name="preferences_reminder_lunch_summary">12:00</string>
-    <string name="preferences_reminder_snack">Horário do lanche</string>
+    <string name="preferences_reminder_snack">Snack time</string>
     <string name="preferences_reminder_snack_summary">16:00</string>
-    <string name="preferences_reminder_dinner">Horário da janta</string>
+    <string name="preferences_reminder_dinner">Dinner time</string>
     <string name="preferences_reminder_dinner_summary">20:00</string>
-    <string name="generate_report">Gerar relatório</string>
-    <string name="share_report">Compartilhar relatório</string>
+    <string name="generate_report">Generate report</string>
+    <string name="share_report">Share report</string>
 
     <!-- Dialogs -->
-    <string name="dialog_ok_text">Ok</string>
-    <string name="dialog_cancel_text">Cancelar</string>
-    <string name="dialog_yes_text">Sim</string>
-    <string name="dialog_no_text">Não</string>
-    <string name="meal_successful_added_message">Refeição adicionada com sucesso</string>
-    <string name="meal_successful_edited_message">Refeição atualizada com sucesso</string>
-    <string name="meal_delete_ask_message">Deseja remover esta refeição</string>
-    <string name="meal_successful_deleted_message">Refeição deletada com sucesso</string>
-    <string name="error_no_meal_in_period">Não há refeições registradas no periodo informado. Por favor selecione um período diferente</string>
-    <string name="generating_meals_report">Gerando relátorio das suas refeições. Por favor, aguarde</string>
-    <string name="foods_added">Alimentos adicionados</string>
-    <string name="food_name">Alimento</string>
+    <string name="dialog_ok_text">OK</string>
+    <string name="dialog_cancel_text">Cancel</string>
+    <string name="dialog_yes_text">Yes</string>
+    <string name="dialog_no_text">No</string>
+    <string name="meal_successful_added_message">meal successfully added</string>
+    <string name="meal_successful_edited_message">meal successfully updated</string>
+    <string name="meal_delete_ask_message">Do you want to remove this meal?</string>
+    <string name="meal_successful_deleted_message">meal successfully deleted</string>
+    <string name="error_no_meal_in_period">There are no meals registered in the selected period. Please select a different date range</string>
+    <string name="generating_meals_report">Generating meals report. Please, wait</string>
+    <string name="foods_added">Foods added</string>
+    <string name="food_name">Foods</string>
 
     <!-- Notification chanels-->
-    <string name="meal_reminder_chanel_name">Lembretes de refeições</string>
-    <string name="meal_reminder_chanel_description">Notificações que irão lembrá-lo(a) de realizar suas refeições sempre no mesmo horário</string>
-    <string name="save">Salvar</string>
+    <string name="meal_reminder_chanel_name">Meal reminders</string>
+    <string name="meal_reminder_chanel_description">Notifications that will remind you to always have your meals at the same time</string>
+    <string name="save">Save</string>
 
-    <string name="search_hint">Procurar</string>
-    <string name="search_foods">Pesquisar alimentos</string>
-    <string name="confirm">Confirmar</string>
-    <string name="my_foods">Meus Alimentos</string>
+    <string name="search_hint">Search</string>
+    <string name="search_foods">Search foods</string>
+    <string name="confirm">Confirm</string>
+    <string name="my_foods">My foods</string>
 </resources>
