feat: Add water
Creating views for add water feature

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -95,4 +95,7 @@
     <string name="dialog_yes">Sim</string>
     <string name="dialog_no">Não</string>
     <string name="dialog_cancel">Cancelar</string>
+    <string name="add_water">Adicionar água</string>
+    <string name="add_meal">Adicionar refeição</string>
+    <string name="new_meal">Nova refeição</string>
 </resources>
