--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,5 +100,7 @@
     <string name="dialog_cancel">Cancel</string>
     <string name="add_meal">Add meal</string>
     <string name="new_meal">New meal</string>
+    <string name="whater_quantity">Quantidade de água</string>
+    <string name="cups">Copos</string>
 
 </resources>
