--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -113,4 +113,15 @@
     <string name="user_terms_and_conditions">Termos e condições de uso</string>
     <string name="user_terms_agree_user_terms">Eu aceito os termos e condições de uso</string>
     <string name="no_internet_connection">Sem conexão com a internet</string>
+
+    <string name="suggestions">Dúvidas ou sugestões?</string>
+    <string name="talk_with_developer">Fale com o desenvolvedor</string>
+    <!-- _-->
+    <string name="contact_email">apps.esampaio@outlook.com</string>
+    <string name="email_app_name">Aplicativo Coma Certo</string>
+    <string name="send_email">Enviar email...</string>
+    <string name="version_news">Novidades da versão</string>
+    <string name="start_use">Começar a usar</string>
+    <string name="version_news_description">Tem sido um bom tempo deste a última vez que nos vimos. Prometo que tratei novidades para este aplicativo em intervalos de tempo menores</string>
+    <string name="news">O que tem de novo</string>
 </resources>
