--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="meal_lunch">Lunch</string>
     <string name="meal_snack">Snack</string>
     <string name="meal_dinner">Dinner</string>
+    <string name="meal_candies">Candies</string>
     <string name="hungry">Hunger</string>
     <string name="hungry_level">Hunger level</string>
     <string name="satiety">Satiety</string>
@@ -124,6 +125,6 @@
     <string name="send_email">Enviar email...</string>
     <string name="version_news">Novidades da versão</string>
     <string name="start_use">Começar a usar</string>
-    <string name="version_news_description">Tem sido um bom tempo deste a última vez que nos vimos. Prometo que tratei novidades para este aplicativo em intervalos de tempo menores</string>
+    <string name="version_news_description">Atualizações sutis na interface\nNova refeição adicionada\nmelhorias na velocidade de geração de relatório</string>
     <string name="news">O que tem de novo</string>
 </resources>
