--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,8 @@
     <string name="start_use">Começar a usar</string>
     <string name="version_news_description">Atualizações sutis na interface\nNova refeição adicionada\nmelhorias na velocidade de geração de relatório</string>
     <string name="news">O que tem de novo</string>
+    <string name="manage_meals">Gerir tipos de refeição</string>
+    <string name="manage_feelings">Gerir tipos de sentimentos</string>
+    <string name="manage_reminders">Meus alarmes</string>
+    <string name="default_meals">Refeições padrão</string>
 </resources>
