--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,5 @@
     <string name="manage_feelings">Gerir tipos de sentimentos</string>
     <string name="manage_reminders">Meus alarmes</string>
     <string name="default_meals">Refeições padrão</string>
+    <string name="my_meals">Minhas refeições</string>
 </resources>
